add styling to buttons on sign-in/sign-up

--- a/app/templates/components/product-search.hbs
+++ b/app/templates/components/product-search.hbs
@@ -2,10 +2,10 @@
 
 <form class="hp-form">
   <div class="form-group">
-    <div class="hp-v5-form home" id="home-sign-up">
+    <div class="hp-v5-form home home-sign-up">
     {{input value=product2 id="product2" class="form-control" placeholder="Search nirvana awaits..." type="text"}}
   </div>
 </div>
 
-  <button class="btn btn-primary home-search-btn" {{action 'productLookup'}}>Submit</button>
+  <button class="btn btn-primary home-search-btn" {{action 'productLookup'}}>Search</button>
 </form>
