--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -266,11 +266,26 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
   width:300px;
 }
 
+.sign-in-up-form {
+  text-align:center;
+  margin: 0 auto;
+}
+
 #nav-sign-up{
-  border: 1px solid #E4E9F0;
   border-radius:10px;
   width:200px;
   float: left;
+}
+
+.sign-in-form-1, .sign-in-form-2 {
+  width:33%;
+  margin: 0 auto;
+}
+
+.sign-in-container {
+  padding-left:25px !important;
+  padding-right:25px !important;
+  text-align:center;
 }
 
 .float {
@@ -285,7 +300,6 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
 .jumbotron {
   padding:0px !important;
   background: #F9F9F9;
-  text-align: center;
   height:500px;
 }
 
