--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -41,9 +41,7 @@
     <div class="col-sm-12" style="">
 
 
-      <div class="above-search-bar-index-2 h2-row-2">Product discussions!</div>
-      <br>
-      <br>
+      <div class="above-search-bar-index-2 h2-row-2" style="text-align:center">Hottest discussions</div>
       <br>
       <div class="comment-container">
         {{#each model as |discussion|}}
