--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -266,6 +266,11 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
   width:300px;
 }
 
+.navbar-btn {
+  background:none;
+  border:none;
+}
+
 .sign-in-up-form {
   text-align:center;
   margin: 0 auto;
@@ -396,6 +401,7 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
 .navbar-default .navbar-nav > li > a:hover {
   color: #337ab7;
 }
+
 
 .api-search-nav {
   background: #f6f8f7 url(//d36cmr08aasnby.cloudfront.net/assets/magnifying-glass-7801789c047a6aeb44fe2d1f4eef8865.png) 5% 50% no-repeat;
@@ -625,7 +631,6 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
-    text-align: center;
 }
 
 .money {
