--- a/app/templates/product.hbs
+++ b/app/templates/product.hbs
@@ -1,10 +1,11 @@
+<div class="container sign-in-container" style="text-align:none;">
 <h1>Start a discusison about this product</h1>
 
 <li>{{model.product}}</li>
 <li>{{model.price}}</li>
-<hr />
 
 {{update-discussion updateDiscuss="updateDiscuss" discuss=model}}
+</div>
 
 
 <!-- {{new-comment discuss=model saveComment="saveComment"}}
