--- a/app/templates/components/sorted-products.hbs
+++ b/app/templates/components/sorted-products.hbs
@@ -1,88 +1,88 @@
-
 {{navbar-api-search}}
-  <div class="container-fluid main">
-<div class="sidebar-left">
-  <div class="filter-widget">
-    <div class="filter-widget-title">
-      <p>Price</p>
-    </div>
-    <div class="price-filter-wrap">
-      <input class="number-low" type="number" placeholder="Min"><span class="price-dash">-</span>
-      <input class="number-high" type="number" placeholder="Max">
-    </div>
-    <button class="price-go-btn">Go</button>
-  </div>
-
-  <div class="filter-widget">
-    <div class="filter-widget-title">
-      <p>Search by category</p>
-      <button {{action 'lowToHigh'}}>Highest Price First</button>
-      <button {{action 'highToLow'}}>Lowest Price First</button>
-      <button {{action 'nameSort'}}>A-Z Sort</button>
-      <button {{action 'storeSort'}}>Store Sort</button>
-
-
-
-    </div>
-    <form action="">
-      <input type="radio"><span class="radio-text"> Electronics</span><br>
-      <input type="radio"><span class="radio-text"> Furniture</span><br>
-      <input type="radio"><span class="radio-text"> Printers</span>
-      <div class="a-tag-more">
-        <a href="#">More...</a>
-      </div>
-    </form>
-  </div>
-
-  <div class="filter-widget">
-    <div class="filter-widget-title">
-      <p>Filter by store</p>
-    </div>
-    <form action="">
-      <input type="checkbox"><span class="radio-text"> Best Buy</span><br>
-      <input{{action 'highToLow'}} type="checkbox"><span class="radio-text"> Amazon</span><br>
-      <input type="checkbox"><span class="radio-text">Walmart</span>
-      <div class="a-tag-more">
-        <a href="#">More...</a>
-      </div>
-    </form>
-  </div>
-
-</div>
-<div class="content">
-
 <div class="container-fluid main">
+  <div class="sidebar-left">
+
+    <div class="filter-widget">
+      <div class="filter-widget-title">
+        <p>Filter Search</p>
+        <button {{action 'highToLow'}}><span class="fa fa-usd"></span></button>
+        <button {{action 'lowToHigh'}}><span class="fa fa-usd"></span><span class="fa fa-usd"></span><span class="fa fa-usd"></span></button>
+        <button {{action 'nameSort'}}><span class="glyphicon glyphicon-sort-by-alphabet"></span></button>
+        <button {{action 'nameSortAlt'}}><span class="glyphicon glyphicon-sort-by-alphabet-alt"></span></button>
+        <button {{action 'storeSort'}}><span class="glyphicon glyphicon-transfer"></span></button>
+        <br>
+      </div>
+      <form action="">
+        <p>Search by category</p>
+        <input type="radio"><span class="radio-text"> Electronics</span><br>
+        <input type="radio"><span class="radio-text"> Furniture</span><br>
+        <input type="radio"><span class="radio-text"> Printers</span>
+        <div class="a-tag-more">
+          <a href="#">More...</a>
+        </div>
+      </form>
+    </div>
+
+    <div class="filter-widget">
+      <div class="filter-widget-title">
+        <p>Price</p>
+      </div>
+      <div class="price-filter-wrap">
+        <input class="number-low" type="number" placeholder="Min"><span class="price-dash">-</span>
+        <input class="number-high" type="number" placeholder="Max">
+      </div>
+      <button class="price-go-btn">Go</button>
+    </div>
+
+    <div class="filter-widget">
+      <div class="filter-widget-title">
+        <p>Filter by store</p>
+      </div>
+      <form action="">
+        <input type="checkbox"><span class="radio-text"> Best Buy</span><br>
+        <input{{action 'highToLow'}} type="checkbox"><span class="radio-text"> Amazon</span><br>
+        <input type="checkbox"><span class="radio-text">Walmart</span>
+        <div class="a-tag-more">
+          <a href="#">More...</a>
+        </div>
+      </form>
+    </div>
+
+  </div>
   <div class="content">
-{{#each sortedProducts as |product|}}
-  <div class="product-box">
-    <div class="img-wrap">
-      <img src={{product.thumbnailImage}}>
-    </div>
-    <div class="product-store">
-      <em>{{store-name product}}</em>
-    </div>
-    <div class="product-name">
-      {{product.name}}
-    </div>
-    <div class="product-sale-price">
-      ${{product.salePrice}}
-    </div>
-    <div class="product-likes-and-comments">
-      <div class="product-likes">
-        <div class="thumbs-up-and-down">
-            <i {{action "saveProduct" product}}class="fa fa-cart-plus" aria-hidden="true" style="font-size:24px;"></i>
-          <!-- <div class="thumbs-down-wrap">
-            <i class="fa fa-thumbs-down" aria-hidden="true" style="font-size:18px;"></i>
-          </div> -->
+
+    <div class="container-fluid main">
+      <div class="content">
+        {{#each sortedProducts as |product|}}
+        <div class="product-box">
+          <div class="img-wrap">
+            <img src={{product.thumbnailImage}}>
+          </div>
+          <div class="product-store">
+            <em>{{store-name product}}</em>
+          </div>
+          <div class="product-name">
+            {{product.name}}
+          </div>
+          <div class="product-sale-price">
+            ${{product.salePrice}}
+          </div>
+          <div class="product-likes-and-comments">
+            <div class="product-likes">
+              <div class="thumbs-up-and-down">
+                <i {{action "saveProduct" product}}class="fa fa-cart-plus" aria-hidden="true" style="font-size:24px;"></i>
+                <!-- <div class="thumbs-down-wrap">
+                <i class="fa fa-thumbs-down" aria-hidden="true" style="font-size:18px;"></i>
+              </div> -->
+            </div>
+          </div>
+          <div class="product-comments">
+            {{new-discuss model=product newDiscuss="newDiscuss"}}
+          </div>
         </div>
       </div>
-      <div class="product-comments">
-        {{new-discuss model=product newDiscuss="newDiscuss"}}
-      </div>
+      {{/each}}
     </div>
   </div>
-{{/each}}
-</div>
-</div>
 </div>
 </div>
