--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,12 +1,14 @@
 
     <div class="container-fluid">
       <div class="index-search jumbotron">
-        <div class="row" style="height:500px;">
+      </div>
+      <div class="opaque-box" style="opacity:.85;">
+        <div class="row">
           <div class="col-sm-6">
             <!-- <img src="http://thumbs.dreamstime.com/z/spotted-monster-carrying-shopping-bags-cute-charming-cartoon-purple-big-spots-white-background-35193608.jpg" height='300' width='400' style=""> -->
           </div>
-          <div class="col-sm-6 col-sm-offset-6" id="second-column-header" style="float:right;">
-            <h2 class="h2-home">Shop smart - Not hard</h2>
+            <div class="col-sm-6 col-sm-offset-6" id="second-column-header" style="float:right;position:relative;top:-300px;">
+              <h2 class="h2-home">Shop smart - Not hard</h2>
               <div class="above-search-bar-index">
                 <p style="font-size:18px;max-width:300px;">Find the best prices on products and what people are saying about them.</p>
               </div>
@@ -15,13 +17,13 @@
               <br>
               {{#if session.isAuthenticated}}
 
-                {{product-search productLookup="productLookup"}}
-                {{else}}
-                <div class="form-group-home" style="margin-top:5px;">
-                  <button {{action 'signInTransition'}} class="btn btn-primary home-search-btn" style="margin-right:10px;">Sign-in</button>
-                  <button {{action 'signUpTransition'}} class="btn btn-primary home-search-btn">Register</button>
-                </div>
-                {{/if}}
+              {{product-search productLookup="productLookup"}}
+              {{else}}
+              <div class="form-group-home" style="margin-top:5px;">
+                <button {{action 'signInTransition'}} class="btn btn-primary home-search-btn" style="margin-right:10px;">Sign-in</button>
+                <button {{action 'signUpTransition'}} class="btn btn-primary home-search-btn">Register</button>
+              </div>
+              {{/if}}
           </div>
         </div>
 
@@ -34,13 +36,11 @@
 
 <hr/>
 <div class="container" style="">
-  <div class="row" style="">
+  <div class="row" id="row-home-2">
     <div class="col-sm-12" style="">
 
 
-      <div class="above-search-bar-index-2 h2-row-2">Product discussions!</div>
-      <br>
-      <br>
+      <div class="above-search-bar-index-2 h2-row-2" style="text-align:center;">Product discussions!</div>
       <br>
 {{sorted-discussions model=model}}
     </div>
