--- a/app/templates/discuss.hbs
+++ b/app/templates/discuss.hbs
@@ -1,23 +1,31 @@
-<div class="container">
-  <div class="well">
-  <h2>{{model.product}}</h2>
-  <h3 class ="money">${{model.price}}</h3>
-  <p class = "category">{{model.category}}</p>
-  <img src='{{model.image}}'>
-  <p>{{model.description}}</p>
-  <p>{{model.notes}}</p>
+<div class="container discussion-container" style="border: 1px solid black;">
+  <div class="row">
+    <div class="discussion-header-left col-xs-6" style="border: 1px solid black;">
+      <h3 class ="money" style="border: 1px solid black;">${{model.price}}</h3>
+      <p class = "category" style="border: 1px solid black;">{{model.category}}</p>
+
+      <img src='{{model.image}}'>
+      <p style="border: 1px solid black;">{{model.description}}</p>
+      <p style="border: 1px solid black;">{{model.notes}}</p>
+    </div>
+
+    <div class="discussion-header-right col-xs-6" style="border: 1px solid black;">
+
+      {{model.author}}
+
+    </div>
   </div>
-  <h2>Reviews About {{model.product}} Below</h2>
+  <h2 style="border: 1px solid black;">Reviews About {{model.product}} Below</h2>
   {{new-comment discuss=model saveComment="saveComment"}}
 
   {{#each model.comments as |comment|}}
-  <div class = "fullComment">
-  <div class = "left">
+  <div class = "fullComment" style="border: 1px solid black;">
+  <div class = "left" style="border: 1px solid black;">
   <p class = "comment"><img class = "authorImage" src='{{comment.authorImage}}'></p>
   <p class = "comment">{{comment.author}}</p>
   </div>
   <div class = "inline">
-  <p>'{{comment.content}}'</p>
+  <p style="border: 1px solid black;">{{comment.content}}</p>
   </div>
   </div>
   <hr>
@@ -26,36 +34,15 @@
 
 <div class="comment-container">
   {{#each sortedDiscussions as |discussion|}}
-  <div class="comment-wrap" style="">
+  <div class="comment-wrap" style="border: 1px solid black;">
 
-    <div class="comment-left" style="">
-      <img id=comment-author-image src="{{discussion.authorImage}}">
+    <div class="comment-left" style="border: 1px solid black;">
+      <img id=comment-author-image src="{{discussion.authorImage}}" style="border: 1px solid black;">
     </div>
 
-    <div class="comment-middle">
-      <div class="comment-content" style="">
-        <div class="author-span"><strong>{{discussion.author}}</strong></div>
-        <br>
-        <span class="product-link-span">{{#link-to 'discuss' discussion}}{{discussion.product}}{{/link-to}}</span>
-        <br>
-        <div class="discussion-notes-span">{{discussion.notes}}</div>
-      </div>
-      <div class="comment-icons" style="">
-        <span class="comment-price"><strong>${{discussion.price}}</strong></span>
-        <span style="margin-right:15px;">{{#link-to 'discuss' discussion}}{{discussion.comments.length}} comments{{/link-to}}</span>
-        <a href="#"{{action "upVote" discussion}}><i class="fa fa-thumbs-up" aria-hidden="true" style="font-size:17px; margin-right:2px;"></i></a>
-        <a href="#"{{action "downVote" discussion}}><i class="fa fa-thumbs-down" aria-hidden="true" style="font-size:17px;"></i></a>
-        {{discussion.rank}}
-      </div>
-    </div>
 
-    <div class="comment-right" style="">
-      <div class="comment-right-top">
-      </div>
-      <div class="comment-right-bottom">
-        {{#link-to 'index'}}<em><a class="category-link" style="color:#999">{{discussion.category}}</a></em>{{/link-to}}
-      </div>
-    </div>
+
+
   </div>
   {{/each}}
 </div>
