--- a/app/templates/components/update-discussion.hbs
+++ b/app/templates/components/update-discussion.hbs
@@ -1,4 +1,6 @@
 <form>
+  {{textarea class="textArea" value=notes id="notes" placeholder = "Any specific question you had about this product or category?"}}
+  <br>
 {{#x-select class="selectpicker" value=category}}
   {{#x-option value="Outdoor"}}Outdoor{{/x-option}}
   {{#x-option value="Health"}}Health{{/x-option}}
@@ -8,8 +10,5 @@
   {{#x-option value="Office"}}Office{{/x-option}}
   {{#x-option value="Electronics"}}Electronics{{/x-option}}
 {{/x-select}}
-<!-- {{input value=category id="category" placeholder = "category"}} -->
-
-{{input value=notes id="notes" placeholder = "notes"}}
-<button {{action 'updateDiscuss' discuss}}>update</button>
+<button class="btn btn-primary" {{action 'updateDiscuss' discuss}}>update</button>
 </form>
