--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,15 +2,15 @@
     <div class="container-fluid">
       <div class="index-search jumbotron">
       </div>
-      <div class="opaque-box" style="opacity:.85;">
+      <div class="opaque-box" style="opacity:.95;">
         <div class="row">
           <div class="col-sm-6">
-            <!-- <img src="http://thumbs.dreamstime.com/z/spotted-monster-carrying-shopping-bags-cute-charming-cartoon-purple-big-spots-white-background-35193608.jpg" height='300' width='400' style=""> -->
+
           </div>
             <div class="col-sm-6 col-sm-offset-6" id="second-column-header" style="float:right;position:relative;top:-300px;">
               <h2 class="h2-home">Shop smart - Not hard</h2>
               <div class="above-search-bar-index">
-                <p style="font-size:18px;max-width:300px;">Find the best prices on products and what people are saying about them.</p>
+            <p class = "box" style="font-size:18px;max-width:350px;">Find the best prices on products and see what people are saying about them.</p>
               </div>
               <br>
               <br>
@@ -37,7 +37,8 @@
 <div class="container" style="">
   <div class="row" id="row-home-2">
     <div class="col-sm-12" style="">
-
+      <br>
+      <br>
 
       <div class="above-search-bar-index-2 h2-row-2" style="text-align:center;">Product discussions!</div>
       <br>
