--- a/app/templates/components/sorted-products.hbs
+++ b/app/templates/components/sorted-products.hbs
@@ -6,14 +6,14 @@
     <div class="filter-widget">
       <div class="filter-widget-title">
         <p>Filter Search</p>
-        <button {{action 'highToLow'}}><span class="fa fa-usd"></span></button>
-        <button {{action 'lowToHigh'}}><span class="fa fa-usd"></span><span class="fa fa-usd"></span><span class="fa fa-usd"></span></button>
-        <button {{action 'nameSort'}}><span class="glyphicon glyphicon-sort-by-alphabet"></span></button>
-        <button {{action 'nameSortAlt'}}><span class="glyphicon glyphicon-sort-by-alphabet-alt"></span></button>
-        <button {{action 'storeSort'}}><span class="glyphicon glyphicon-transfer"></span></button>
+        <button {{action 'highToLow'}}class = "btn searchBtn font"><span class="fa fa-usd"></span></button>
+        <button {{action 'lowToHigh'}}class = "btn searchBtn font"><span class="fa fa-usd"></span><span class="fa fa-usd"></span><span class="fa fa-usd"></span></button>
+        <button {{action 'nameSort'}}class = "btn searchBtn font2"><span class="glyphicon glyphicon-sort-by-alphabet"></span></button>
+        <button {{action 'nameSortAlt'}}class = "btn searchBtn font2"><span class="glyphicon glyphicon-sort-by-alphabet-alt"></span></button>
+        <button {{action 'storeSort'}}class = "btn searchBtn font3"><span class="glyphicon glyphicon-transfer"></span></button>
         <br>
       </div>
-      <form action="">
+      <!-- <form action="">
         <p>Search by category</p>
         <input type="radio"><span class="radio-text"> Electronics</span><br>
         <input type="radio"><span class="radio-text"> Furniture</span><br>
@@ -21,10 +21,10 @@
         <div class="a-tag-more">
           <a href="#">More...</a>
         </div>
-      </form>
+      </form> -->
     </div>
 
-    <div class="filter-widget">
+    <!-- <div class="filter-widget">
       <div class="filter-widget-title">
         <p>Price</p>
       </div>
@@ -33,9 +33,9 @@
         <input class="number-high" type="number" placeholder="Max">
       </div>
       <button class="price-go-btn">Go</button>
-    </div>
+    </div> -->
 
-    <div class="filter-widget">
+    <!-- <div class="filter-widget">
       <div class="filter-widget-title">
         <p>Filter by store</p>
       </div>
@@ -47,7 +47,7 @@
           <a href="#">More...</a>
         </div>
       </form>
-    </div>
+    </div> -->
 
   </div>
   <div class="content">
