--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -37,11 +37,9 @@
 <div class="container" style="">
   <div class="row" id="row-home-2">
     <div class="col-sm-12" style="">
-
-
-      <div class="above-search-bar-index-2 h2-row-2" style="text-align:center;">Product discussions!</div>
+      <div class="above-search-bar-index-2 h2-row-2" style="text-align:center;"></div>
       <br>
-{{sorted-discussions model=model}}
+      {{sorted-discussions model=model}}
     </div>
   </div>
 </div>
