--- a/app/templates/sign-in.hbs
+++ b/app/templates/sign-in.hbs
@@ -28,5 +28,8 @@
           {{fa-icon 'sign-in'}} Sign In
       </button>
   {{/if}}
+  <br>
+  <br>
+  <p>Don't have an account? {{#link-to 'sign-up'}}Register{{/link-to}} for free.</p>
 </div>
 </div>
