--- a/app/templates/sign-up.hbs
+++ b/app/templates/sign-up.hbs
@@ -19,5 +19,8 @@
     <button class='home-search-btn' style="float:none;color:#fff;" {{action 'signUp'}}>
         {{fa-icon 'user-plus'}} Sign Up
     </button>
+    <br>
+    <br>
+    <p>Already have an account? Go ahead and {{#link-to 'sign-in'}}sign-in{{/link-to}}.</p>
   </div>
 </div>
