--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -22,8 +22,8 @@
             </div>
           </form>
           {{/if}}
-          <li class=""><a href="#">HOT DEALS <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">DISCUSSIONS</a></li>
+          <li class=""><a>HOT DEALS <span class="sr-only">(current)</span></a></li>
+          <li><a>DISCUSSIONS</a></li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {{#if session.isAuthenticated}}
@@ -42,4 +42,10 @@
   </nav>
 </div>
 
+<div class="app-wrap" style="min-height:900px;border">
 {{outlet}}
+</div>
+
+<footer>
+
+</footer>
