--- a/app/templates/product.hbs
+++ b/app/templates/product.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="well center">
+  <div class="well newCenter">
   <h2>{{model.product}}</h2>
   <h3 class ="money">${{model.price}}</h3>
   <p class = "category">{{model.category}}</p>
