--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -464,6 +464,10 @@ text-shadow: 0 -1px 0 rgba(0, 0, 0, .3);
   transform: translateY(-50%);
 }
 
+.newCenter {
+  text-align: center;
+}
+
 .search-input-wrap {
   margin-top: 6.25px;
 }
